--- a/index.html
+++ b/index.html
@@ -3,18 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Everett's Asteroid Blaster</title>
-
-  <!-- PWA manifest -->
-  <link rel="manifest" href="manifest.json">
+  <title>Everett's Asteroid Blaster</title><link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#111111">
-
-  <!-- Standalone mode -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-
-  <!-- iOS icons -->
   <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png">
   <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png">
 </head>
